refactor (RollAndOffsetInfo.java)